add deferred render logic

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(GLAD_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/thirdpart/glad/src)
 set(GLAD_SRC_FILE1 ${GLAD_SRC_DIR}/glad.c)
 set(GLFW_LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/thirdpart/glfw_3_3/lib)
 set(GLFW_LIBS ${GLFW_LIB_DIR}/glfw3.lib)
+set(ASSIMP_LIBS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/thirdpart/model_import/lib/assimp.lib)
 
 add_subdirectory(Render)
 add_subdirectory(Camera)
@@ -17,7 +18,7 @@ add_subdirectory(Game)
 configure_file(configuration/root_directory.h.in configuration/root_directory.h)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/utils/include)
 include_directories(${PROJECT_SOURCE_DIR}/Camera/include)
-
+include_directories(${PROJECT_SOURCE_DIR}/thirdpart/model_import/include)
 
 set(GAME_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Game/include)
 
@@ -30,6 +31,7 @@ ${PROJECT_BINARY_DIR}
 ${GAME_INCLUDE_DIR} 
 )
 
-target_link_libraries(shadowmap PUBLIC ${GLFW_LIBS} Render Camera Utils Game)
+set_property(TARGET shadowmap PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dlls)
+target_link_libraries(shadowmap PUBLIC ${GLFW_LIBS} Render Camera Utils Game ${ASSIMP_LIBS_DIR})
 # message(STATUS "msg:  " ${GLFW_LIBS})
  
